--- a/templates/error.html
+++ b/templates/error.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <h1>Ocurrió un error</h1>
+    <h1>Consultando en BCRA</h1>
     <p class="error-message">{{ message }}</p>
     <a href="/">Volver a la página principal</a>
 </body>
